syntax = "proto3";
package pb;
option go_package= ".;pb";

// The greeter service definition.
service Query {
  rpc GetAge (userInfo) returns (ageInfo) {}
}

// 请求用的结构体，包含一个name字段
message userInfo {
  string name = 1;
}

// 响应用的结构体，包含一个age字段
message ageInfo {
  int32 age = 1;
}

